--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="images/DSC_0446.jpg" alt="" />
+                    <img src="DSC_0446.jpg" alt="" />
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
@@ -174,7 +174,7 @@
                         <a href=""><i class="fa-brands fa-linkedin"></i></a>
                     </div>
 
-                    <a href="images/my-cv.pdf" download class="btn btn2">Download </a>
+                    <a href="my-cv.pdf" download class="btn btn2">Download </a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet" action="">
