--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <ul id="sidemenu">
                     <li><a href="#header">Home</a></li>
                     <li><a href="#about">About</a></li>
-                    <li><a href="#services">Skills</a></li>
+                    <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-circle-xmark" onclick="closemenu()"></i>
                 </ul>
@@ -39,10 +39,13 @@
         <div class="container">
             <div class="row">
                 <div class="about-col-1">
-                    <img src="DSC_0446.jpg" alt="" />
+                    <img src="DSC_0446.jpg"alt="" />
                 </div>
                 <div class="about-col-2">
                     <h1 class="sub-title">About Me</h1>
+                    <br>
+                    <hr>
+                    <br>
                     <p>
                         Aspiring Full-Stack Developer with a strong foundation in HTML, CSS, Python, and JavaScript.
                         <br> A dedicated learner, I am enthusiastic about web development and continually expanding my
@@ -66,7 +69,7 @@
     </div>
 
     <!---------------------services--------------------->
-    <div id="services">
+    <div id="skills">
         <div class="container">
             <h1 class="sub-title">Skills</h1>
             <div class="services-list">
