--- a/index.html
+++ b/index.html
@@ -9,12 +9,11 @@
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
-
 <body>
     <div id="header">
         <div class="container">
             <nav>
-                <img src="https://t4.ftcdn.net/jpg/03/32/85/27/240_F_332852766_pJh9eFwegC034cUbpfq0mqO8Ee21wwVb.jpg"
+                <img src="logo.jpg"
                     class="
                     logo" />
                 <ul id="sidemenu">
@@ -83,7 +82,7 @@
                     <p>Coming Soon...</p>
                 </div>
                 <div>
-                    <i class="fa-brands fa-app-store"></i>
+                    <i class="fa-solid fa-network-wired"></i>
                     <h2> DSA </h2>
                     <p>Coming Soon...</p>
                 </div>
@@ -98,13 +97,9 @@
             <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="work">
-                    <img src="https://miro.medium.com/v2/resize:fit:1200/1*Xd1-zjgrQkNf5I78X2KH5Q.jpeg" alt="" />
+                    <img src="calculator.jpeg" alt="" />
                     <div class="layer">
                         <h3>Social Media App</h3>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi
-                        </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -112,10 +107,6 @@
                         alt="" />
                     <div class="layer">
                         <h3>Music App</h3>
-                        <p>
-
-                        </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
@@ -123,10 +114,7 @@
                         alt="" />
                     <div class="layer">
                         <h3>Online Shopping App</h3>
-                        <p>
-                            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Quasi
-                        </p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+
                     </div>
                 </div>
             </div>
