--- a/index.html
+++ b/index.html
@@ -99,22 +99,21 @@
                 <div class="work">
                     <img src="calculator.jpeg" alt="" />
                     <div class="layer">
-                        <h3>Social Media App</h3>
+                        <h3>Calculator</h3>
                     </div>
                 </div>
                 <div class="work">
                     <img src="https://images.macrumors.com/t/14OVgA_xEQRTTmm3MxPqQ6ed3Gs=/1200x1200/smart/article-new/2023/11/apple-music-playstation-5.jpg "
                         alt="" />
                     <div class="layer">
-                        <h3>Music App</h3>
+                        <h3></h3>
                     </div>
                 </div>
                 <div class="work">
                     <img src="https://png.pngtree.com/png-clipart/20200701/original/pngtree-online-shopping-png-image_5345788.jpg"
                         alt="" />
                     <div class="layer">
-                        <h3>Online Shopping App</h3>
-
+                        <h3></h3>
                     </div>
                 </div>
             </div>
