--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
+<script src="script.js"></script>
     <div id="header">
         <div class="container">
             <nav>
@@ -134,13 +135,11 @@
                     </p>
                     <p><i class="fa-solid fa-phone-volume"></i>9820248153</p>
                     <div class="social-icon">
-                        <a href="https://www.facebook.com/"><i class="fa-brands fa-facebook"></i></a>
-                        <a href=""><i class="fa-brands fa-instagram"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-github"></i>
                         <a href=""><i class="fa-brands fa-linkedin"></i></a>
+                        <a href=""><i class="fa-brands fa-twitter"></i></a>
                     </div>
-
-                    <a href="my-cv.pdf" download class="btn btn2">Download </a>
+                    <a href="Cv.pdf" download class="btn btn2">Resume </a>
                 </div>
                 <div class="contact-right">
                     <form name="submit-to-google-sheet" action="">
@@ -156,13 +155,12 @@
 
         <div class="copyright">
             <p>
-                Copyright © cool web.<i class="fa-solid fa-heart"></i> Made By
-                santosh
+                Thank You For visiting My Portfolio <i class="fa-solid fa-heart"></i> Santosh
             </p>
         </div>
     </div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js" ;></script>
-    <script src="script.js"></script>
+    
 </body>
 
 </html>
