--- a/index.html
+++ b/index.html
@@ -131,13 +131,15 @@
                 <div class="contact-left">
                     <h1 class="sub-title">Contact Me</h1>
                     <p>
-                        <i class="fa-regular fa-paper-plane"></i> sahum3378@gmail.com
+                        <i class="fa-regular fa-paper-plane"></i>sahum3378@gmail.com
                     </p>
                     <p><i class="fa-solid fa-phone-volume"></i>9820248153</p>
                     <div class="social-icon">
-                        <a href=""><i class="fa-brands fa-github"></i>
-                        <a href=""><i class="fa-brands fa-linkedin"></i></a>
-                        <a href=""><i class="fa-brands fa-twitter"></i></a>
+                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.youtube.com/channel/UCC9HdMwr3_9lAlIbsxWCJDQ"><i class="fa-brands fa-youtube"></i></a>
+                        <a href="https://www.linkedin.com/in/santosh-kumar-113503188/"><i class="fa-brands fa-linkedin"></i></a>
+                        <a href="https://twitter.com/Ssantosh1998"><i class="fa-brands fa-twitter"></i></a>
+                        <a href="https://github.com/Santosh0805"><i class="fa-brands fa-github"></i>
                     </div>
                     <a href="Cv.pdf" download class="btn btn2">Resume </a>
                 </div>
@@ -160,7 +162,7 @@
         </div>
     </div>
     <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js" ;></script>
-    
+
 </body>
 
 </html>
