--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 </head>
 <body>
-<script src="script.js"></script>
     <div id="header">
         <div class="container">
             <nav>
@@ -135,7 +134,7 @@
                     </p>
                     <p><i class="fa-solid fa-phone-volume"></i>9820248153</p>
                     <div class="social-icon">
-                        <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                        <a href="https://www.instagram.com/classy.santosh/"><i class="fa-brands fa-instagram"></i></a>
                         <a href="https://www.youtube.com/channel/UCC9HdMwr3_9lAlIbsxWCJDQ"><i class="fa-brands fa-youtube"></i></a>
                         <a href="https://www.linkedin.com/in/santosh-kumar-113503188/"><i class="fa-brands fa-linkedin"></i></a>
                         <a href="https://twitter.com/Ssantosh1998"><i class="fa-brands fa-twitter"></i></a>
@@ -161,8 +160,8 @@
             </p>
         </div>
     </div>
-    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js" ;></script>
-
+    <script src="https://unpkg.com/typed.js@2.1.0/dist/typed.umd.js";></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
