--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                     class="
                     logo" />
                 <ul id="sidemenu">
-                    <li><a href="#header">Home</a></li>
+                    <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#skills">Skills</a></li>
                     <li><a href="#contact">Contact</a></li>
@@ -58,8 +58,8 @@
                     </div>
                     <div class="tab-contents active-tab" id="education">
                         <ul>
-                            <li><span>B.com</span><br />Graduation</li>
-                            <li><span>JavaScript</span><br />Developer</li>
+                            <li><span>B.com .</span><br />Graduation</li>
+                            <li><span>Full-Stack Web Developer . </span><br />Front-end Developer</li>
                         </ul>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
         </div>
     </div>
 
-    <!---------------------services--------------------->
+    <!---------------------Skills--------------------->
     <div id="skills">
         <div class="container">
             <h1 class="sub-title">Skills</h1>
